--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -15,6 +15,9 @@ body {
   width: 100%;
   padding: 2rem;
   min-height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-content {
